fix paragraph (br tag -> p tag and adjust spacing)

--- a/css/style.css
+++ b/css/style.css
@@ -1643,6 +1643,7 @@ img {
 }
 
 .pg_about .el_sectionMsg {
+  font-family: Montserrat, "Noto Sans JP", sans-serif;
   font-weight: 700;
   font-size: 0.875rem;
   margin-bottom: 0;
@@ -1660,9 +1661,18 @@ img {
 .pg_about .el_sectionMsg::after {
   margin-bottom: -3px;
 }
+
+.pg_about .el_sectionMsg.el_sectionMsg__space {
+  margin-bottom: 31px;
+}
+@media screen and (min-width: 1440px) {
+  .pg_about .el_sectionMsg.el_sectionMsg__space {
+    margin-bottom: 36px;
+  }
+}
 @media screen and (min-width: 1440px) {
   .pg_about .el_sectionMsg::before {
-    margin-top: -4px;
+    margin-top: -2px;
   }
 
   .pg_about .el_sectionMsg::after {
